Css/main.css
* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

body {
	line-height: 1;
	display: flex;
	flex-direction: column;
	@import url("https://fonts.googleapis.com/css2?family=Karla:wght@200;300&family=Spectral:wght@300;400;500;700&display=swap");
}

/* HERO SECTION STYLING */

.hero {
	background-image: url(../Images/hero-background.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	color: white;
	height: 50vh;
	display: flex;
	align-items: center;
	justify-content: center;
}

.hero-header > h1 {
	font-size: 2.5rem;
	text-align: center;
	padding: 1rem;
	font-family: "Spectral", serif;
	font-weight: 700;
}

.hero-text > p {
	text-align: center;
	font-size: 1.2rem;
	padding: 1rem;
	font-family: "Karla", sans-serif;
}

/* HERO BUTTON STYLING */
.hero-button {
	display: flex;
	justify-content: center;
	margin-top: 1.3rem;
}

.hero-button > button {
	text-align: center;
	padding: 0.5rem;
}

.hero-button > .noselect {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	-webkit-tap-highlight-color: transparent;
}

.hero-button > button {
	width: 150px;
	height: 50px;
	cursor: pointer;
	font-size: 20px;
	font-family: "Spectral", serif;
	letter-spacing: 5px;
	background: #2690d4;
	border: 2px solid black;
	box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4);
	transition: 500ms;
}

.hero-button > button:after {
	content: "";
	position: absolute;
	transform: translateX(-55px) translateY(-40px);
	width: 25px;
	height: 25px;
	border-radius: 50%;
	background: transparent;
	box-shadow: 0px 0px 50px transparent;
	transition: 500ms;
}

.hero-button > button:hover {
	transform: translateY(-5px);
	box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
}

.hero-button > button:hover:after {
	background: white;
	box-shadow: 0px 0px 20px #ffc421, 0px 0px 30px #ffc421,
		inset 0px 0px 10px #ffc421;
	animation: spin 1s infinite linear;
}

@keyframes spin {
	25% {
		transform: translateX(-25px) translateY(-35px);
		width: 15px;
		height: 15px;
	}
	50% {
		transform: translateX(-55px) translateY(-30px);
		width: 5px;
		height: 5px;
	}
	75% {
		transform: translateX(-85px) translateY(-35px);
		width: 15px;
		height: 15px;
	}
}

.hero-button > button:focus {
	outline: none;
}

/* App section */

.app-section {
	height: 25vh;
	background-color: #f0f0f0;
	align-items: center;
	justify-content: center;
}

.app-text {
	font-size: 1.3rem;
	font-weight: 500;
	text-align: center;
	padding: 1rem;
}

.app-text > h2 {
	font-size: 1.7rem;
	font-family: "Karla", sans-serif;
	font-weight: 700;
}

.app-section-container {
	display: flex;
	flex-direction: row;
	justify-content: center;
    margin-top: 1rem;
}

.app-section-container > div {
	padding: 1rem;
	margin: 0rem 7rem 0rem 7rem;
}

.app-section-container > div > p {
	font-size: 1.05rem;
	text-align: justify;
	text-justify: inter-word;
	font-family: "Karla", sans-serif;
}

/* Triad styling */

.triad-flex-container {
	display: flex;
	background-color: #333333;
	flex-direction: row;
	justify-content: center;
	height: 35rem;
}

.triad-grid-cont {
	display: grid;
	margin: 0 3rem 0 3rem;
	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.one-cont {
	display: flex;
	flex-direction: column;
	text-align: center;
	/* background-color: white; */
	margin: 1rem;
	border-radius: 9px;
}

.white-cont {
	background-color: white;
	margin: 0;
	padding: 1rem;
	height: 15rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
}

.one-cont > .img-cont {
	margin: 0;
	padding: 0;
	text-align: center;
}

.one-cont > img {
	width: 100%;
}

.white-cont > .triad-header {
	padding: 0.5rem;
	margin: 0.5rem;
	text-align: center;
}

.white-cont > .triad-header > h2 {
	font-family: "Spectral", serif;
	font-weight: 700;
	font-size: 1.3rem;
}

.white-cont > triad-text {
	padding: 0.5rem;
	margin: 0.5rem;
	text-align: justify;
	text-justify: inter-word;
}

/* Digital needs styling */
.digital-needs {
	height: 25vh;
}

.digital-container {
	display: flex;
	flex-direction: column;
	height: 10vh;
	justify-content: space-around;
}

.digital-container > div {
	padding: 2rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.digital-container > div > h2 {
	font-weight: 700;
	font-size: 2rem;
	text-align: center;
	margin-top: 5rem;
	font-family: "Karla", sans-serif;
}

.digital-container > div > p {
	text-align: justify;
	text-justify: inter-word;
	font-family: "Karla", sans-serif;
}

/* Split box */
.split-grid-cont {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
	height: 30vh;
}

.split-box1 {
	background-color: #2690d4;
	color: white;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
    padding: 2rem;
}

.split-box1 > div > h2,
.split-box2 > div > h2 {
	font-weight: 700;
	font-size: 1.3rem;
	padding: 1rem;
	font-family: "Karla", sans-serif;
}

.split-box1 > div > p,
.split-box2 > div > p {
	text-align: justify;
	text-justify: inter-word;
    font-family: 'Karla', sans-serif;
}

.split-box2 {
	background-color: #333333;
	color: white;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	padding: 2rem;
	text-align: center;
}

/* footer */

footer {
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	height: 2vh;
	margin: 0rem;
	padding: 1rem;
	color: white;
	background-color: black;
	align-items: center;
    font-family: 'Karla', sans-serif;
}

.myname {
	color: #2690d4;
}

/* Media queries for responsiveness */

@media only screen and (max-width: 767px) {
	/* web app section */
	.app-section {
		height: 35%;
	}

	.app-section-container {
		flex-direction: column;
	}

	.app-section-container > div {
		margin: 3rem;
	}

	/* triad styling */
	.triad-flex-container {
		height: 40%;
	}

	/* digital needs */
	.digital-needs {
		height: 40vh;
	}

	.digital-container {
		height: 10rem;
	}

	.digital-container > div > h2 {
		padding-top: 3rem;
	}

	.split-grid-cont {
		height: 30rem;
	}

	.split-box1,
	.split-box2 {
		padding: 1rem;
	}

	footer {
		flex-direction: column;
		justify-content: space-around;
		height: 4rem;
        
	}

	footer > div {
		padding: 0.5rem;
	}
}


/* For Ipad */
@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
  /* web app section */
    .app-section-container > div {
	padding: 0rem;
	margin: 0rem;
}

/* Triad styling */
.triad-flex-container {
		height: 80rem;
	}
}

